--- a/src/style.css
+++ b/src/style.css
@@ -4,19 +4,26 @@
   box-sizing: border-box;
 }
 
-ul {
+ul.country-list {
   list-style: none;
   padding: 2em;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  gap: 5em;
+  justify-content: center;
 }
 
 /* Country Card */
 div.card {
   max-width: 15em;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  overflow: hidden;
+  border-radius: 10px;
 }
 
 div.country-img img {
-  width: 15em;
+  width: 240px;
+  height: 160px;
 }
 
 div.card-body {
@@ -31,6 +38,24 @@ div.likes {
   align-items: center;
 }
 
+div.likes a {
+  color: #000;
+}
+
 div.likes a svg {
-  width: 1.5em;
+  width: 1.3em;
+}
+
+div.actions {
+  text-align: center;
+  padding: 1em;
+}
+
+div.actions button {
+  padding: 0.5em;
+  width: 100%;
+  font-size: 1em;
+  border: 1px solid #000;
+  border-radius: 10px;
+  cursor: pointer;
 }
