--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,53 @@ body {
   box-sizing: border-box;
 }
 
+.logo {
+  padding: 19px;
+  border-radius: 100%;
+  border: 2px solid rgb(198, 192, 185);
+  text-align: center;
+  height: 70px;
+  width: 70px;
+  cursor: pointer;
+}
+
+header {
+  top: 0;
+  padding: 70px 0 100px;
+  height: 80px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+nav {
+  width: 100%;
+}
+
+nav ul {
+  padding-top: 19px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  height: inherit;
+}
+
+nav ul li.active {
+  border-bottom: 2px solid grey;
+}
+
+nav ul li {
+  list-style: none;
+  margin-right: 12px;
+  cursor: pointer;
+}
+
+nav ul li:hover {
+  border-bottom: 2px solid grey;
+}
+
 ul.country-list {
   list-style: none;
   padding: 2em;
@@ -19,6 +66,7 @@ ul.country-list {
   grid-template-columns: auto auto auto;
   gap: 5em;
   justify-content: center;
+  margin-bottom: 4em;
 }
 
 /* Country Card */
@@ -66,53 +114,6 @@ div.actions button {
   border: 1px solid #000;
   border-radius: 10px;
   cursor: pointer;
-}
-
-.logo {
-  padding: 19px;
-  border-radius: 100%;
-  border: 2px solid rgb(198, 192, 185);
-  text-align: center;
-  height: 70px;
-  width: 70px;
-  cursor: pointer;
-}
-
-header {
-  top: 0;
-  padding: 70px 0 100px;
-  height: 80px;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-nav {
-  width: 100%;
-}
-
-nav ul {
-  padding-top: 19px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
-  height: inherit;
-}
-
-ul li.active {
-  border-bottom: 2px solid grey;
-}
-
-ul li {
-  list-style: none;
-  margin-right: 12px;
-  cursor: pointer;
-}
-
-ul li:hover {
-  border-bottom: 2px solid grey;
 }
 
 footer {
