Display comment in popup for countries

--- a/src/style.css
+++ b/src/style.css
@@ -237,8 +237,15 @@ footer {
 
 ul.comment-list {
   width: 100%;
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
 ul.menu li:hover {
   border-bottom: 2px solid grey;
+}
+
+ul.comment-list li:hover {
+  text-decoration: none;
 }
