--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,16 @@
-html {
-  font-family: 'Roboto', serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-h3 {
-  font-size: 24px;
-  text-align: center;
-  margin: 2px 0  2px;
+* {
+  padding: 0;
+  margin: 0;
 }
 
 body {
-  background: white;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Fira Sans', sans-serif;
   font-size: 15px;
   font-weight: normal;
   line-height: 18px;
+  color: rgb(17, 16, 32);
 }
 
 * {
@@ -32,101 +29,98 @@ body {
   cursor: pointer;
 }
 
-header {
-  padding: 70px 0 100px;
-  height: 80px;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+a.navbar-brand svg {
+  width: 100px;
+  color: #000;
 }
 
-nav {
-  width: 100%;
+a.navbar-brand p {
+  font-size: 1.5em;
+  letter-spacing: 2px;
 }
 
-nav ul {
-  padding-top: 19px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
-  height: inherit;
-}
-
-nav ul li.active {
-  border-bottom: 2px solid grey;
-}
-
-nav ul li {
-  list-style: none;
-  margin-right: 12px;
-  cursor: pointer;
-}
-
-ul.comment-list li {
-  border: 1px solid rgb(249, 246, 246);
-  margin-top: 12px;
-  padding: 12px;
-}
-
-nav ul li:hover {
-  border-bottom: 2px solid grey;
-}
-
-ul.country-list {
-  list-style: none;
-  padding: 2em;
-  display: grid;
-  grid-template-columns: auto auto auto;
-  gap: 5em;
-  justify-content: center;
-  margin-bottom: 4em;
-}
-
-/* Country Card */
 div.card {
-  max-width: 15em;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  overflow: hidden;
-  border-radius: 10px;
+  transition: 1s;
 }
 
-.modal-body img {
-  text-align: center;
-  width: 60%;
-  height: 10%;
-  border: 1px solid gray;
+div.card:hover {
+  cursor: pointer;
+  filter: drop-shadow(0 0 0.30rem rgb(148, 148, 148));
 }
 
-div.country-img img {
-  width: 240px;
-  height: 160px;
+div.card-img {
+  width: 100%;
+  height: 190px;
+  background-position: center;
+  background-size: cover;
 }
 
-div.card-body {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0.7em 0.5em;
+div.card-body h4 {
+  font-weight: 700;
+}
+
+span.p-lead {
+  font-weight: 600;
 }
 
 div.likes {
   display: flex;
   align-items: center;
+  gap: 5px;
 }
 
 div.likes a {
   color: #000;
 }
 
-div.likes a svg {
-  width: 1.3em;
+div.likes a:hover {
+  color: crimson;
 }
 
-div.actions {
+div.likes a:hover svg {
+  fill: crimson;
+}
+
+div.likes a svg {
+  width: 1.3em;
+  transition: 0.2s;
+}
+
+/**************
+  Modal Styling
+**************/
+
+div.modal-dialog {
+  min-width: 50em;
+}
+
+div.modal-content {
+  background-color: #e9ecef;
+  /* position: relative; */
+}
+
+/* .btn-close {
+  position: absolute;
+  right: 2em;
+  top: 2.6em;
+  font-size: 1.5em;
+  cursor: pointer;
+} */
+
+.modal-body img {
   text-align: center;
-  padding: 1em;
+  width: 75%;
+  height: 20%;
+}
+
+ul.list-group {
+  max-width: 30em;
+  margin: 0 auto;
+}
+
+form {
+  max-width: 25em;
+  margin: 0 auto;
 }
 
 form button {
@@ -164,34 +158,6 @@ div.actions button {
   margin: 0;
 }
 
-/* modal */
-.modal-container {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  padding-top: 20px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.4);
-  padding-bottom: 100px;
-}
-
-.card-container {
-  background-color: #fff;
-  width: 40%;
-  height: 100vh;
-  margin: auto;
-  border: none;
-}
-
-.header-container {
-  margin: auto;
-  border: none;
-}
-
 .close {
   color: #aaa;
   font-size: 28px;
@@ -204,42 +170,6 @@ div.actions button {
   color: #000;
   text-decoration: none;
   cursor: pointer;
-}
-
-.modal-header {
-  display: flex;
-  top: 0;
-  justify-content: flex-end;
-  position: relative;
-  margin-top: 0;
-  padding: 3px;
-}
-
-.modal-body {
-  width: 100%;
-  background-color: #fff;
-  margin: auto;
-}
-
-.image-container {
-  margin: auto;
-  padding: 0;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.content {
-  display: flex;
-  flex-direction: column;
-}
-
-ul.comment-list {
-  width: 100%;
-  padding: 0;
-  margin: 0;
-  list-style: none;
 }
 
 ul.menu li:hover {
